--- a/package.json
+++ b/package.json
@@ -19,7 +19,21 @@
     "dependencies": {
         "keycloakify": "^11.4.3",
         "react": "^18.2.0",
-        "react-dom": "^18.2.0"
+        "react-dom": "^18.2.0",
+        "@patternfly/patternfly": "^5.4.0",
+        "@patternfly/react-core": "^5.4.1",
+        "@patternfly/react-icons": "^5.4.0",
+        "@patternfly/react-table": "^5.4.1",
+        "i18next": "^23.15.1",
+        "i18next-http-backend": "^2.6.1",
+        "lodash-es": "^4.17.21",
+        "react-hook-form": "7.53.0",
+        "react-i18next": "^15.0.2",
+        "react-router-dom": "^6.26.2",
+        "keycloak-js": "26.0.6",
+        "@patternfly/react-styles": "^5.4.0",
+        "@keycloak/keycloak-admin-client": "26.0.6",
+        "@keycloakify/keycloak-account-ui": "26.0.6-rc.1"
     },
     "devDependencies": {
         "@eslint/js": "^9.15.0",
@@ -41,7 +55,8 @@
         "prettier": "3.3.1",
         "typescript": "^5.2.2",
         "typescript-eslint": "^8.15.0",
-        "vite": "^5.0.8"
+        "vite": "^5.0.8",
+        "@types/lodash-es": "^4.17.12"
     },
     "engines": {
         "node": "^18.0.0 || >=20.0.0"
